# cloud-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  .release-it.json  OWNERS  README.md  pyproject.toml  requirements.txt  tox.ini
aws/: README.md  aws_utils.py  create_aws_network_resources.py  delete_s3_velero_bucket.py  logger.py  security_rules_example.json
clouds/aws/: README.md  aws_utils.py  create_aws_network_resources.py  delete_aws_resources.py  delete_s3_velero_bucket.py  security_rules_example.json  session_clients.py
clouds/aws/aws_roles/: aws_roles.py
clouds/aws/roles/: README.md
clouds/aws/utilities/: delete_aws_resources.py
